Bug 366014 - if i minimize current split view it remains to be active
Summary: if i minimize current split view it remains to be active
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.14.2
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-23 13:43 UTC by Askar Safin
Modified: 2019-07-13 23:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Askar Safin 2016-07-23 13:43:06 UTC
-

Reproducible: Always

Steps to Reproduce:
1. Open two vertical split views in kate
2. Activate (say) right view
3. Resize right view to size 0. I. e. make it so small that it will disappear

Actual Results:  
Right view will remain to be active. Yes, it has size 0 and it is completely invisible, but it is still active. If I type some characters, they will go to this active view. Of course, user will be very frustrated. He will think: "I type characters, why they don't appear?" They actually appear at invisible view. If I click at some files at "Documents" (i. e. at "Documents" panel), then that active view will open this file, completely invisible for me

Expected Results:  
Right view should deactivate when I resize it to zero
Comment 1 Dominik Haumann 2016-09-05 18:46:09 UTC
A possible solution is to disallow collapsing completely, would that be an acceptible solution?
Comment 2 Christoph Cullmann 2016-09-06 18:21:41 UTC
I could live with no way to collapse splitters.
Comment 3 Askar Safin 2016-09-07 22:51:12 UTC
Personally for me this is acceptable solution
Comment 4 Christoph Cullmann 2019-07-13 23:53:37 UTC
Git commit 5d20fee8d6a6c7060a0ddb7bf501e362fa35db14 by Christoph Cullmann.
Committed on 13/07/2019 at 23:52.
Pushed by cullmann into branch 'master'.

disallow full collapse of views

M  +14   -2    kate/kateviewmanager.cpp

https://commits.kde.org/kate/5d20fee8d6a6c7060a0ddb7bf501e362fa35db14