disallow full collapse of views

BUG: 366014